Handle edge cases in Redis caching and API response parsing