@@ -10,6 +10,7 @@ import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -27,15 +28,41 @@ public class StatementApiService {
     @Value("${spring.openapi.assembly.key}")
     private String apikey;
 
+
+    /**
+     * 정치인 이름으로 발언 검색
+     * @param name
+     * @return
+     */
     public List<StatementApiDTO> getStatementsByPolitician(String name) {
         AssemblyApiResponse<String> response = fetchStatementsByFigure(name);
 
-        if (!response.isSuccess()) {
-            log.error("API 호출 실패: {}", response.resultMessage());
-            return List.of();
+        return parseResponseToStatements(response);
+    }
+
+    /**
+     * API 응답을 파싱하여 발언 목록 반환
+     * @param response
+     * @return
+     */
+    private List<StatementApiDTO> parseResponseToStatements(AssemblyApiResponse<String> response) {
+        if (response.data() == null) {
+            log.warn("API 응답 데이터 없음");
+            return Collections.emptyList();
         }
 
-        return apiMapper.map(response);
+        try {
+            List<StatementApiDTO> statements = apiMapper.map(response);
+
+            if (statements.isEmpty()) {
+                log.info("검색 결과가 없습니다");
+            }
+
+            return statements;
+        } catch (Exception e) {
+            log.error("응답 파싱 중 오류: {}", e.getMessage(), e);
+            return Collections.emptyList();
+        }
     }
 
     public List<StatementApiDTO> getStatementsByKeyword(String keyword) {
@@ -105,7 +132,7 @@ public class StatementApiService {
 
         String xmlResponse = webClient.get()
                 .uri(uriBuilder -> uriBuilder
-                        .path("/news/figure")
+                        .path("/nauvppbxargkmyovh")
                         .queryParam("apiKey", apikey)
                         .queryParam("name", figureName)
                         .build())
